--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           <li>
             <a
               href="portfolio.html"
-              class="link-no-underline link-style blue-text"
+              class="link-no-underline link-style blue-text current-link"
               >Portfolio</a
             >
           </li>
