--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>
               <a
                 href="index.html"
-                class="link-no-underline link-style blue-text"
+                class="link-no-underline link-style blue-text current-link"
                 >Agencja</a
               >
             </li>
@@ -79,7 +79,7 @@
               EFEKTYWNE ROZWIĄZANIA
                DLA WASZEGO BIZNESU
             </h1>
-            <button type="button" class="order-service-button">
+            <button type="button" class="order-service-button" data-modal-open>
               Zamów usługę
             </button>
           </div>
@@ -146,26 +146,29 @@
           <div class="container">
             <h2 class="section-header">Czym się zajmujemy</h2>
             <ul class="our-services-list no-padding">
-              <li>
+              <li class="service-item">
                 <img src="./images/img1.jpg"
                   width="370"
                   height="294"
                   alt="plan"
                 />
+                <p class="img-label">Aplikacje komputerowe</p>
               </li>
-              <li>
+              <li class="service-item">
                 <img src="./images/img2.jpg"
                   width="370"
                   height="294"
                   alt="design"
                 />
+              <p class="img-label">Aplikacje mobilne</p>
               </li>
-              <li>
+              <li class="service-item">
                 <img src="./images/img3.jpg"
                   width="370"
                   height="294"
                   alt="style"
                 />
+                <p class="img-label">Rozwiązania grficzne</p>
               </li>
             </ul>
           </div>
@@ -415,5 +418,16 @@
         </div>
         </div>
       </footer>
+  </body>
+</html><div class="backdrop is-hidden" data-modal>
+      <div class="modal-box">
+        <button type="button" class="btn-modal-close" data-modal-close>
+          <svg width="18" height="18">
+            <use xlink:href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
