--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   height="294"
                   alt="style"
                 />
-                <p class="img-label">Rozwiązania grficzne</p>
+                <p class="img-label">Rozwiązania graficzne</p>
               </li>
             </ul>
           </div>
