--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
         </div>
       </footer>
   </body>
-</html><div class="backdrop is-hidden" data-modal>
+</html>
+<div class="backdrop is-hidden" data-modal>
       <div class="modal-box">
         <button type="button" class="btn-modal-close" data-modal-close>
           <svg width="18" height="18">
