--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               EFEKTYWNE ROZWIĄZANIA
                DLA WASZEGO BIZNESU
             </h1>
-            <button type="button" class="order-service-button" data-modal-open>
+            <button type="button" class="order-service-button">
               Zamów usługę
             </button>
           </div>
@@ -418,17 +418,5 @@
         </div>
         </div>
       </footer>
-  </body>
-</html>
-<div class="backdrop is-hidden" data-modal>
-      <div class="modal-box">
-        <button type="button" class="btn-modal-close" data-modal-close>
-          <svg width="18" height="18">
-            <use xlink:href="./images/icons.svg#close"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
