--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               EFEKTYWNE ROZWIĄZANIA
                DLA WASZEGO BIZNESU
             </h1>
-            <button type="button" class="order-service-button">
+            <button type="button" class="order-service-button" data-modal-open>
               Zamów usługę
             </button>
           </div>
@@ -418,5 +418,15 @@
         </div>
         </div>
       </footer>
+  <div class="backdrop is-hidden" data-modal>
+      <div class="modal-box">
+        <button type="button" class="btn-modal-close" data-modal-close>
+          <svg width="18" height="18">
+            <use xlink:href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
