--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       <div class="modal-box">
         <button type="button" class="btn-modal-close" data-modal-close>
           <svg width="18" height="18">
-            <use xlink:href="./images/icons.svg#close-1"></use>
+            <use xlink:href="./images/icons.svg#icon-close-1"></use>
           </svg>
         </button>
       </div>
