--- a/portfolio.html
+++ b/portfolio.html
@@ -71,130 +71,177 @@
     </header>
     <div class="header-line-border"></div>
     <main>
-      <div class="container section">
+      <section class="container section">
+        <div class="container">
       <ul class="filter-buttons">
-        <li>
-          <button type="button" class="filter-button">Wszystkie</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Strony</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Aplikacje</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Design</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Marketing</button>
-        </li>
+        <li><button type="button" class="filter-button">Wszystkie</button></li>
+        <li><button type="button" class="filter-button">Strony</button></li>
+        <li><button type="button" class="filter-button">Aplikacje</button></li>
+        <li><button type="button" class="filter-button">Design</button></li>
+        <li><button type="button" class="filter-button">Marketing</button></li>
       </ul>
-      <div class="container">
-        <ul class="product-container no-padding">
-          <li class="product-card">
+      <!-- <div class="container"> -->
+          <ul class="product-container no-padding">
+            <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-1.jpg"
               width="370"
               height="294"
               alt="Technocrack"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">Technocrack</h4>
             <p class="product-card-text">Strona internetowa</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+          <p class="portfolio-text">
+             Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+             koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+            niezabezpieczone serwery konkurencji
+          </p>
             <img
               src="./images/portfolio-img-2.jpg"
               width="370"
               height="294"
               alt="Grafika New Orlean vs Golden Star"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">
               Grafika New Orlean vs Golden Star
             </h4>
             <p class="product-card-text">Design</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-3.jpg"
               width="370"
               height="294"
               alt="Restauracja Seafood"
-              style="display: block;"
             />
-            <h4 class="product-card-header">Restauracja Seafood</h4>
+            </div>
+            <h4 class="product-card-header">
+              Restauracja Seafood
+            </h4>
             <p class="product-card-text">Aplikacja</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-4.jpg"
               width="370"
               height="294"
               alt="Projekt Prime"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">Projekt Prime</h4>
             <p class="product-card-text">Marketing</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-5.jpg"
               width="370"
               height="294"
               alt="Projekt Boxes"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">Projekt Boxes</h4>
             <p class="product-card-text">Aplikacja</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-6.jpg"
               width="370"
               height="294"
               alt="Inspiration has no Borders"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">Inspiration has no Borders</h4>
             <p class="product-card-text">Strona internetowa</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-7.jpg"
               width="370"
               height="294"
-              alt="Magazyn Limited Edition"
-              style="display: block;"
+              alt="Magazyn Limited Edition"    
             />
+            </div>
             <h4 class="product-card-header">Magazyn Limited Edition</h4>
             <p class="product-card-text">Design</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-8.jpg"
               width="370"
               height="294"
               alt="Projekt LAB"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">Projekt LAB</h4>
             <p class="product-card-text">Marketing</p>
           </li>
           <li class="product-card">
+            <div class="portfolio-label">
+            <p class="portfolio-text">
+              Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+              koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+              niezabezpieczone serwery konkurencji
+            </p>
             <img
               src="./images/portfolio-img-9.jpg"
               width="370"
               height="294"
               alt="Growing Business"
-              style="display: block;"
             />
+            </div>
             <h4 class="product-card-header">Growing Business</h4>
             <p class="product-card-text">Aplikacja</p>
           </li>
         </ul>
       </div>
-      </div>
+    </section>
     </main>
     <footer class="footer">
         <div class="container footer-container">
