--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             </li>
       </ul>
       </header>
+      <div class="header-line-border"></div>
       <main>
         <section>
           <div class="top-section">
